# MLOps_course_AGH_LAB01

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  LICENSE  README.md  app.py  inference.py  main.py  pyproject.toml  pytest.ini  secrets.yaml  settings.py  test_app.http  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_settings.py
